fix: changed example to work with java 8